미세먼지 예제 완료 https://wikidocs.net/110742 여기할차례

--- a/templates/main.html
+++ b/templates/main.html
@@ -8,8 +8,10 @@
     <title>Main Page</title>
 </head>
 <body>
-{% include "header.html" %}    ###########이 부분 추가##############
-MAIN PAGE. 추후 추가할 예정임. 우아아아아아앙
+{% include "header.html" %}
+    <br>
+    <center>[MAIN PAGE]</center>
+    <br>
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 {% block content %}
 {% endblock %}
