카카오지도 추가

--- a/templates/main.html
+++ b/templates/main.html
@@ -9,9 +9,10 @@
 </head>
 <body>
 {% include "header.html" %}
-    <br>
-    <center>[MAIN PAGE]</center>
-    <br>
+    <!-- <br>
+    <center>나랑 같이 밥먹을래?</center>
+    <center>Would you like to have lunch with me?</center>
+    <br> -->
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 {% block content %}
 {% endblock %}
