--- a/templates/lunch_go/lunch_main.html
+++ b/templates/lunch_go/lunch_main.html
@@ -3,23 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>점심먹자</title>
-    <style>
-        html, body {
-            width: 100%;
-            height: 100%;
-        }
-        div {
-            width: 90%;
-            text-align: center;
-            margin: 0 auto;
-            /* outline: 1px solid red !important; /* div 확인용 */ */
-        }
-        #kakao_map {
-            width: 90%;
-            height: 50%;
-            margin: 0 auto;
-        }
-    </style>
+  <link rel="stylesheet" type="text/css" href = "style.css">
 </head>
 <body>
 
