--- a/templates/lunch_go/style.css
+++ b/templates/lunch_go/style.css
@@ -1,15 +1,16 @@
-html, body {
-    width: 100%;
-    height: 100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
 div {
-    width: 90%;
-    text-align: center;
-    margin: 0 auto;
-    /* outline: 1px solid red !important; /* div 확인용 */ */
+  width: 90%;
+  text-align: center;
+  margin: 0 auto;
+  /* outline: 1px solid red !important; /* div 확인용 */
 }
 #kakao_map {
-    width: 90%;
-    height: 50%;
-    margin: 0 auto;
+  width: 90%;
+  height: 50%;
+  margin: 0 auto;
 }
