--- a/templates/lunch_go/lunch_main.html
+++ b/templates/lunch_go/lunch_main.html
@@ -32,11 +32,13 @@
     
     <!-- https://getbootstrap.com/docs/4.1/components/collapse/ -->
     
+    
+    
     <div class="accordion" id="accordionExample">
       <div class="card">
         <div class="card-header" id="headingOne">
           <h5 class="mb-0">
-            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
               1팀 - 쭈꾸미 먹으러 갈사람!? 4/6
             </button>
           </h5>
@@ -67,7 +69,7 @@
       <div class="card">
         <div class="card-header" id="headingThree">
           <h5 class="mb-0">
-            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
               3팀 - 돈까스 후딱 먹고오실 분 1/6
             </button>
           </h5>
