--- a/templates/lunch_go/lunch_main.html
+++ b/templates/lunch_go/lunch_main.html
@@ -4,36 +4,32 @@
 <head>
   <meta charset="utf-8" />
   <title>점심먹자</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+    }
+
+    div {
+      width: 90%;
+      text-align: center;
+      margin: 0 auto;
+      /* outline: 1px solid red !important; /* div 확인용 */
+    }
+
+    #kakao_map {
+      width: 90%;
+      height: 50%;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 
 <body>
 
-<<<<<<< HEAD
   {% extends 'main.html' %}
   {% block content %}
-=======
-{% extends 'main.html' %}
-{% block content %}
-    
-    <div>
-        <a href="#create_team" button type="button" class="btn btn-outline-primary">새 팀 만들기</a>
-    </div>
-    
-    <!-- https://getbootstrap.com/docs/4.1/components/collapse/ -->
-    
-    
-    
-    <div class="accordion" id="accordionExample">
-      <div class="card">
-        <div class="card-header" id="headingOne">
-          <h5 class="mb-0">
-            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              1팀 - 쭈꾸미 먹으러 갈사람!? 4/6
-            </button>
-          </h5>
-        </div>
->>>>>>> 76f0e58eea0e42a0326bca5fee1a5d8669d2e9c3
 
   <div>
     <a href="#create_team" button type="button" class="btn btn-outline-primary">새 팀 만들기</a>
@@ -46,7 +42,7 @@
       <div class="card-header" id="headingOne">
         <h5 class="mb-0">
           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-            aria-expanded="false" aria-controls="collapseOne">
+            aria-expanded="true" aria-controls="collapseOne">
             1팀 - 쭈꾸미 먹으러 갈사람!? 4/6
           </button>
         </h5>
@@ -58,7 +54,6 @@
           <div id="contents">12시 50분 1층 로비에서 출발 합니다!</div>
         </div>
       </div>
-<<<<<<< HEAD
     </div>
     <div class="card">
       <div class="card-header" id="headingTwo">
@@ -73,15 +68,6 @@
         <div class="card-body">
           <div id="hashtag">#마라탕</div>
           <div id="contents">마라탕 먹고 스트레스 풀러 가실부운~~</div>
-=======
-      <div class="card">
-        <div class="card-header" id="headingThree">
-          <h5 class="mb-0">
-            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-              3팀 - 돈까스 후딱 먹고오실 분 1/6
-            </button>
-          </h5>
->>>>>>> 76f0e58eea0e42a0326bca5fee1a5d8669d2e9c3
         </div>
       </div>
     </div>
@@ -89,7 +75,7 @@
       <div class="card-header" id="headingThree">
         <h5 class="mb-0">
           <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
-            aria-expanded="false" aria-controls="collapseThree">
+            aria-expanded="true" aria-controls="collapseThree">
             3팀 - 돈까스 후딱 먹고오실 분 1/6
           </button>
         </h5>
