--- a/templates/lunch_go/lunch_main.html
+++ b/templates/lunch_go/lunch_main.html
@@ -4,26 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>점심먹자</title>
-  <style>
-    html,
-    body {
-      width: 100%;
-      height: 100%;
-    }
+  <link rel="stylesheet" href="/static/css/style.css" />
 
-    div {
-      width: 90%;
-      text-align: center;
-      margin: 0 auto;
-      /* outline: 1px solid red !important; /* div 확인용 */
-    }
-
-    #kakao_map {
-      width: 90%;
-      height: 50%;
-      margin: 0 auto;
-    }
-  </style>
 </head>
 
 <body>
@@ -55,36 +37,36 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
-          aria-expanded="true" aria-controls="collapseTwo">
-          2팀 - 마라탕 조지실!? 5/6
-        </button>
-      </h5>
-    </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-      <div class="card-body">
-        <div id="hashtag">#마라탕</div>
-        <div id="contents">마라탕 먹고 스트레스 풀러 가실부운~~</div>
+    <div class="card">
+      <div class="card-header" id="headingTwo">
+        <h5 class="mb-0">
+          <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
+            aria-expanded="true" aria-controls="collapseTwo">
+            2팀 - 마라탕 조지실!? 5/6
+          </button>
+        </h5>
+      </div>
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+        <div class="card-body">
+          <div id="hashtag">#마라탕</div>
+          <div id="contents">마라탕 먹고 스트레스 풀러 가실부운~~</div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingThree">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
-          aria-expanded="true" aria-controls="collapseThree">
-          3팀 - 돈까스 후딱 먹고오실 분 1/6
-        </button>
-      </h5>
-    </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-      <div class="card-body">
-        <div id="hashtag">#돈까스</div>
-        <div id="contents">1시 미팅이라 후딱 먹고 오실 분 구해요!</div>
+    <div class="card">
+      <div class="card-header" id="headingThree">
+        <h5 class="mb-0">
+          <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
+            aria-expanded="true" aria-controls="collapseThree">
+            3팀 - 돈까스 후딱 먹고오실 분 1/6
+          </button>
+        </h5>
+      </div>
+      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+        <div class="card-body">
+          <div id="hashtag">#돈까스</div>
+          <div id="contents">1시 미팅이라 후딱 먹고 오실 분 구해요!</div>
+        </div>
       </div>
     </div>
   </div>
