--- a/templates/dust_checker/dust_detail.html
+++ b/templates/dust_checker/dust_detail.html
@@ -40,7 +40,7 @@ var data = new Array();
 
 var ctx = document.getElementById('myChart').getContext('2d');
 var chart = new Chart(ctx, {
-    // The type of chart we want to create
+    // The type of chart we want to create sadfasf
     type: 'bar',
 
     // The data for our dataset
